--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,14 +1,25 @@
 <mat-selection-list [multiple]="false" class="w-60" (selectionChange)="onSelect()">
-  <mat-list-option [routerLink]="'/dashboard'">
+  <mat-list-option [routerLink]="['/dashboard']">
     <mat-icon mat-list-icon>home</mat-icon>
     <div mat-line>Home</div>
   </mat-list-option>
-  <mat-list-option [routerLink]="'/logs'">
+  <mat-list-option [routerLink]="['/logs']">
     <mat-icon mat-list-icon>list_alt</mat-icon>
     <div mat-line>Logs</div>
   </mat-list-option>
-  <mat-list-option [routerLink]="'/settings'">
+  <mat-list-option [routerLink]="['/settings']">
     <mat-icon mat-list-icon>settings</mat-icon>
     <div mat-line>Settings</div>
   </mat-list-option>
+
+  <div *ngIf="isAdmin">
+
+  <mat-divider></mat-divider>
+  <div mat-subheader>Admin menu</div>
+  <mat-list-option [routerLink]="['/user']">
+    <mat-icon mat-list-icon>group</mat-icon>
+    <div mat-line>Users</div>
+  </mat-list-option>
+  </div>
+
 </mat-selection-list>
