--- a/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -15,9 +15,9 @@
           <div class="col-span-12">
             <mat-form-field class="w-full" appearance="standard">
               <mat-label>Username</mat-label>
-              <input matInput type="text" [(ngModel)]="authData.username" [disabled]="isLoading">
-              <button *ngIf="authData.username && !isLoading" matSuffix mat-icon-button aria-label="Clear"
-                      (click)="authData.username=''">
+              <input matInput type="text" [(ngModel)]="authData.name" [disabled]="isLoading">
+              <button *ngIf="authData.name && !isLoading" matSuffix mat-icon-button aria-label="Clear"
+                      (click)="authData.name=''">
                 <mat-icon>close</mat-icon>
               </button>
             </mat-form-field>
