--- a/src/app/modules/auth/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/modules/auth/pages/sign-up-page/sign-up-page.component.html
@@ -16,9 +16,9 @@
           <div class="col-span-12">
             <mat-form-field class="w-full" appearance="standard">
               <mat-label>Username</mat-label>
-              <input matInput type="text" [(ngModel)]="signUpData.username" [disabled]="isLoading">
-              <button *ngIf="signUpData.username && !isLoading" matSuffix mat-icon-button aria-label="Clear"
-                      (click)="signUpData.username=''">
+              <input matInput type="text" [(ngModel)]="signUpData.name" [disabled]="isLoading">
+              <button *ngIf="signUpData.name && !isLoading" matSuffix mat-icon-button aria-label="Clear"
+                      (click)="signUpData.name=''">
                 <mat-icon>close</mat-icon>
               </button>
             </mat-form-field>
