--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -3,5 +3,9 @@
   <span>Home</span>
 </mat-toolbar>
 <div class="container mx-auto p-4">
-  <button mat-raised-button>aaa</button>
+
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <app-users-widget *ngIf="isAdmin"></app-users-widget>
+
+  </div>
 </div>
