--- a/src/app/modules/settings/pages/profile-page/profile-page.component.html
+++ b/src/app/modules/settings/pages/profile-page/profile-page.component.html
@@ -3,5 +3,7 @@
   <span class="">Profile</span>
 </mat-toolbar>
 <div class="container mx-auto p-4">
-  <button mat-raised-button>aaa</button>
+  <button mat-raised-button (click)="onTestBtnClick()">
+    Test
+  </button>
 </div>
