--- a/src/app/modules/settings/pages/settings-page/settings-page.component.html
+++ b/src/app/modules/settings/pages/settings-page/settings-page.component.html
@@ -3,5 +3,5 @@
   <span>Settings</span>
 </mat-toolbar>
 <div class="container mx-auto p-4">
-  <button mat-raised-button>aaa</button>
+  <app-dispatch-settings></app-dispatch-settings>
 </div>
