--- a/src/app/modules/settings/pages/settings-page/components/telegram-settings/telegram-settings.component.html
+++ b/src/app/modules/settings/pages/settings-page/components/telegram-settings/telegram-settings.component.html
@@ -5,6 +5,7 @@
       <input matInput type="text" [(ngModel)]="telegramId">
     </mat-form-field>
 
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
     <button mat-stroked-button class="bg-blue-700">
       SET TELEGRAM ID
       <mat-icon class="ml-2">
@@ -15,4 +16,5 @@
     <button mat-stroked-button>
       SEND TEST MESSAGE
     </button>
+  </div>
 </div>
