--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -5,7 +5,8 @@
 <div class="container mx-auto p-4">
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      <app-users-widget *ngIf="isAdmin"></app-users-widget>
+<!--      <app-users-widget *ngIf="isAdmin"></app-users-widget>-->
 
   </div>
 </div>
+
